finished the page

--- a/Net.html
+++ b/Net.html
@@ -32,13 +32,46 @@
             <h1>Things</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur dolorem ab nisi facilis praesentium! Alias iste rem ut aliquid dolorem aspernatur sunt, dolore ad magni, aperiam doloremque maxime voluptas ducimus.</p>
             <div class="btn">
-                <a href="#" class="btn2"><button>PLAY</button></a>
-                <a href="#"><button>Watch review</button></a>
+                <a href="#" ><button>PLAY</button></a>
+                <a href="#"><button id="more">More info</button></a>
             </div>
         </div>
         <div class="right">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQri1NXn-JQ0w42icgICWzz6TR_gxpzm0TRdA&s" placeholder="Stranger things" id="img1">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQri1NXn-JQ0w42icgICWzz6TR_gxpzm0TRdA&s" placeholder="Stranger things" id="img1">
         </div>
+    </div> 
+     <h3 class="Pop">Popular on Netflix</h3>
+    <div class="Carosle">
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+    </div>   
+         <h3 class="Pop">Trending Now</h3>
+    <div class="Carosle">
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+    </div>   
+         <h3 class="Pop"> Top Rated</h3>
+    <div class="Carosle">
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
+        <div class="movie"></div>
     </div>
 </body>
 </html>
