--- a/Net.html
+++ b/Net.html
@@ -12,15 +12,15 @@
         <div class="nav">
             <nav>
                 <ul>
-                <a href="#"><li>Home</li></a>
-                <a href="tv shows.html" target="_blank"><li>Tv Shows</li></a>
+                <a href="Net.html"><li>Home</li></a>
+                <a href="tv.html" target="_blank"><li>Tv Shows</li></a>
                 <a href="#"><li>Movies</li></a>
                 <a href="#"><li>New & Popular</li></a>
                 <a href="#"><li>My List</li></a>
                 <div class="nav2">
                     <a href="#"><li>Search</li></a>
                     <a href="#"><li>Notification</li></a>
-                    <a href="#"><li>Profile</li></a>
+                    <a href="Sign.html"><li>Profile</li></a>
                 </div>
                 </ul>
             </nav>
